<resources>
    <string name="app_name" translatable="false">OutOfTime</string>
    <string name="logo_tsu_description">this is a tsu logo</string>
    <string name="eye_button_description">this is button to see password</string>
    <string name="back_button_description">this is a button to go back</string>
    <string name="menu_button_description">this is a menu button</string>
    <string name="left_arrow_button_description">previous week</string>
    <string name="right_arrow_button_description">next week</string>
    <string name="error_picture_description">error appeared</string>

    <string name="empty_error">Field mustn\'t be empty!</string>
    <string name="email_error">Email must be in format \"example@domain.com\"</string>
    <string name="name_letters_error">Name must contain only letters!</string>
    <string name="name_case_error">Name must start with and contain  upper case letter!</string>
    <string name="surname_letters_error">Surname must contain only letters!</string>
    <string name="surname_case_error">Surname must start with and contain upper case letter!</string>
    <string name="patronymic_letters_error">Patronymic must contain only letters!</string>
    <string name="patronymic_case_error">Patronymic must start with and contain  upper case letter!</string>
    <string name="two_passwords_error">Passwords must be equal!</string>
    <string name="password_error">Password must contain at least one upper case letter, one special symbol and one digit</string>
    <string name="password_length_error">Password must contain more than 6 symbols</string>
    <string name="id_number_error">Student gradlebook number must contain only 10 digits</string>
    <string name="cluster_error">There is no such cluster</string>
    <string name="default_error" translatable="false">default error</string>
    <string name="ok_error" translatable="false">OK</string>

    <string name="monday_short">m.</string>
    <string name="tuesday_short">t.</string>
    <string name="wednesday_short">w.</string>
    <string name="thursday_short">th.</string>
    <string name="friday_short">fr.</string>
    <string name="sunday_short">sn.</string>
    <string name="saturday_short">s.</string>

    <string name="january">january</string>
    <string name="february">february</string>
    <string name="march">march</string>
    <string name="april">april</string>
    <string name="may">may</string>
    <string name="june">june</string>
    <string name="july">july</string>
    <string name="august">august</string>
    <string name="september">september</string>
    <string name="october">october</string>
    <string name="november">november</string>
    <string name="december">december</string>

    <string name="login_verb">Log in</string>
    <string name="registration">Registration</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="registration_verb">Registration</string>
    <string name="continue_registration">Continue registration</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="patronymic">Patronymic</string>
    <string name="student">Student</string>
    <string name="educator">Educator</string>
    <string name="group_text">Group</string>
    <string name="lecture_hall">Lecture Hall</string>
    <string name="schedule_choice">choose schedule you want to see</string>
    <string name="document_number">Grade book number</string>
    <string name="cluster_number">Cluster number</string>
    <string name="repeat_password">Repeat password</string>

    <string name="schedule">Schedule</string>
    <string name="empty_string" translatable="false" />

    <string name="logout">Log out</string>
    <string name="choose_schedule">Schedule</string>

    <string name="entrance_subtitle">and see your incredible \n schedule</string>

    <string name="default_cluster_number" translatable="false">000000</string>
    <string name="default_class_time_text" translatable="false">8:45 – 10:20</string>
    <string name="default_date_text">m. 1 january 1970</string>
    <string name="default_day_text" translatable="false">1</string>
    <string name="default_class_text" translatable="false">Undefined</string>
    <string name="class_info">Class Information</string>
    <string name="default_educator_text" translatable="false">Default Defaultovich Defaultov</string>
    <string name="default_lecture_text" translatable="false">214 (2) text</string>


    <string name="registration_409_error_message">User with this email already exists!</string>
    <string name="registration_404_error_message">Cluster number is incorrect</string>
    <string name="login_400_error_message">Invalid credentials</string>
    <string name="undefined" translatable="false">undefined</string>
    <string name="internet_connection_error">There is no Internet connection</string>
    <string name="internal_server_error" translatable="false">Internal server error</string>
    <string name="empty_class_list">There aren\'t classes today</string>


</resources>