<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/schedule_choice_padding"
    tools:context=".presentation.schedulechoice.ScheduleTypeChoiceFragment">


    <Button
        android:id="@+id/educatorButton"
        style="@style/empty_buttons_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/educator"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/groupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/groupButton"
        style="@style/empty_buttons_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/group_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/lectureHallButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/educatorButton"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/lectureHallButton"
        style="@style/empty_buttons_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lecture_hall"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupButton"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/textView"
        style="@style/subtitle1_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_choice"
        app:layout_constraintBottom_toTopOf="@+id/educatorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>